Add notes for Bulgaria

--- a/blog/2015051.md
+++ b/blog/2015051.md
@@ -5,17 +5,25 @@ Distance:	84.4 miles
 Route:	tracks/2015-06-24.geojson
 ---
 
-Like @stevens1884 I'm having trouble getting to Ihtiman. For me it is trying to find roads that aren't motorways.
+Like Thomas Stevens I'm having trouble getting to Ihtiman (&#1048;&#1093;&#1090;&#1080;&#1084;&#1072;&#1085;). For me it is trying to find roads that aren't motorways or incredibly busy multi-lane highways. I also failed to find a post office or anywhere that sells postcards so I failed my niece's request for a postcard from Sofia. Not from want of trying. A security guard (an increasingly common feature) at a post office on the outskirts of Sofia wasn't entirely sure about the security implications of my bicycle but my lack of Serbian meant he gave up trying to tell me I probably couldn't leave my bike there. 
+
+Eventually I found a giant [Decathlon](http://www.decathlon.bg/) and went inside to buy bits and pieces that might be useful. I bought some cheap new underpants and some nutrient bars for my emergency food stocks. I asked the friendly guy at the checkout for advice on cycling to Ihtiman. Although he wasn't sure of the best route all the way, he was able to give advice about the next couple of miles.
 
 ![landscape](https://farm4.staticflickr.com/3922/19453887812_0c7a9f146e.jpg "Getting out of Sofia")
 
-Mountains with snow on top seen from the very bumpy road about 15km from Ihtiman
+The roads were a bit of a mix for the next 20 miles ranging from normal roads, to a stretch of motorway I wasn't sure if I was allowed to be on, to some of the worst maintained road I've seen since the US. One stretch had a sign seeming to indicate it was closed but I carried on regardless as the only alternative was the motorway. A crater filled (almost) empty road was still preferable to trans-continental traffic. Despite the huge craters and big rectangular sections that had been removed almost entirely, there was still the odd rusty vehicle trying to negotiate this part of the number 8 highway.
+
+Mountains with snow on top seen from the very bumpy road about 15km from Ihtiman.
 
 ![landscape](https://pbs.twimg.com/media/CIRCiVEWIAATlMu.jpg:large "Snow-topped mountains")
+
+I'd contemplated staying in Ihtiman but it didn't seem as inviting when I got there. I stopped in a mini supermarket to buy some food and drink. It was the type where everything was behind a counter and you had to ask the shop assistant for it. That makes shopping more daunting when you don't speak the language. There were a lot of people milling around in Ihtiman and plenty of horse-drawn carts on the road. Life was clearly different out here.
 
 ![landscape](https://pbs.twimg.com/media/CIRI8U4WcAAHTZZ.jpg:large "Ihtiman")
 
 ![landscape](https://farm1.staticflickr.com/451/18837792814_e85885768d.jpg "Ihtiman")
+
+I pushed on through Mirovo and over into a big winding river valley. I was now going downhill. 
 
 ![landscape](https://farm1.staticflickr.com/336/19460284395_b387637cb0.jpg "Mirovo")
 
@@ -27,6 +35,8 @@ Mountains with snow on top seen from the very bumpy road about 15km from Ihtiman
 
 ![portrait](https://farm1.staticflickr.com/385/19460307235_a8364d3e8d.jpg "Ruins")
 
+I emerged from the end of the valley onto a big plain flanked by hills. I wouldn't have hills for the rest of the day. Well, none other than artificial ones where the road kept crossing the railway line.
+
 ![portrait](https://farm1.staticflickr.com/375/18839719183_8986a80f78.jpg "Mountains")
 
-Glad I'm inside tonight. There's a big thunderstorm and torrential rain.
+I reached Pazardjik (&#1055;&#1072;&#1079;&#1072;&#1088;&#1076;&#1078;&#1080;&#1082;) and used free wifi at a petrol station to book a hotel on the outskirts of town. It was the cheapest I could find and had a swimming pool. Brilliant. However, it turned out to be the end of the season and the pool was closed. Still, I could have a shower. Despite the expense of a hotel, I was glad to be inside tonight as there was a big thunderstorm and torrential rain. That would not have been fun in my tent.
