--- a/blog/2015052.md
+++ b/blog/2015052.md
@@ -5,7 +5,7 @@ Distance:	84.4 miles
 Route:	tracks/2015-06-25.geojson
 ---
 
-Bought fruit from the busy market in Pazardjik just like Stevens. The lady at the stall threw in a bonus nectarine.
+Bought fruit from the busy market in Pazardjik (&#1055;&#1072;&#1079;&#1072;&#1088;&#1076;&#1078;&#1080;&#1082;) just like Stevens. The lady at the stall threw in a bonus nectarine.
 There's a strong wind today. Thankfully from the west
 
 ![landscape](https://farm4.staticflickr.com/3815/18839723713_71333c451a.jpg "Market in Pazardjik")
@@ -16,7 +16,7 @@ There's a strong wind today. Thankfully from the west
 
 ![landscape](https://farm1.staticflickr.com/345/19274260519_aed6a76eb9.jpg "Sunflower field")
 
-Decided to have a short day and stay in Plovdiv as it seems a shame not to see the sites. I'll have a long day tomorrow instead.
+Decided to have a short day and stay in Plovdiv (&#1055;&#1083;&#1086;&#1074;&#1076;&#1080;&#1074;) as it seems a shame not to see the sites. I'll have a long day tomorrow instead.
 
 Plovdiv is very nice. Roman ruins. Galleries. Street cafes. Nice gelateria too.
 
