--- a/blog/0048.md
+++ b/blog/0048.md
@@ -2,6 +2,7 @@
 Title:	A puncture at the Continental Divide
 Date:	2014-05-24T19:00:00+PDT
 Distance:	43.7 miles
+Punctures:	1
 Route:	tracks/2014-05-24.geojson
 ---
 
