--- a/blog/0056.md
+++ b/blog/0056.md
@@ -5,6 +5,22 @@ Distance:	67.2 miles
 Route:	tracks/2014-06-03.geojson
 ---
 
+Today was the end of Wyoming. However, having realised that I was only about 10 miles from Colorado, I couldn't resist a ride south to the border just so I could say I'd cycled to Colorado.
+
+It was a lovely morning and the ride was over fairly gentle hills. At the border there was a collection of lottery establishments. I assumed that either Colorado or Wyoming must have different gambling laws so they were built to attract people from the other side (whichever one had the stricter laws). A few hundred metres further on I got a grand view of northern Colorado. Way off in the distance I could see the Colorado section of the Rockies. These snow-capped peaks striking skywards were what I'd expected of the Rockies. They were certainly far more impressive than the 'hills' of the Wyoming Rockies. Thomas Stevens had probably been quite sensible to cross in Wyoming but I felt a little short-changed never-the-less.
+
 ![landscape](https://farm4.staticflickr.com/3845/14223335249_2bf0cf5cf7.jpg "The edge of Colorado")
 
+After admiring the view for a few minutes I crossed the road and headed back to Wyoming. Back up to Cheyenne I rode and bought supplies in the supermarket for lunch then headed out east following the route that Sue had shown me the day before. As I left the city environs I found I had roamed into an area where my included international call minutes were available to me again. I rang my aunty and uncle in Scotland and caught up on a bit of family news by the side of the railroad.
+
+I was now in relatively flat, rolling farmland. The mountains were long gone. The horizon closed back in; I was no longer in "big sky" country.
+
+I stopped in this little town of Burns to find something to drink. I couldn't find any shops but did find the public library. I asked if I could get some water and the librarian let me use the water fountain. He was really interesting and had been a nuclear technician stationed in the UK during the Cold War. He'd trained with the SAS and worked in military intelligence. Not really what you'd expect of a librarian. I thanked him for the water and he took my photo for the library tweet feed.
+
+The country had become a bit flatter and I was back on rough gravel roads. Suddenly, over on the left in a field, I saw three antelope's headed watching me. They seemed a bit confused and, comically, weren't sure which way to bounce off as they all had different ideas.
+
 ![landscape](https://farm6.staticflickr.com/5535/14408678232_d65e2b4004.jpg "Antelope and big sky")
+
+I reached Pine Bluffs and asked the lady at the Town Hall where to stay. She sent me over to the RV park where a night's stay was $10. I got talking to the Plankingtons. Mr Plankington had been a long-distance truck driver which explained his friendliness. He told me some of his stories from his truck driving days and got me to show him my route on his big road atlases. He told me about the global HQ of __Cabelas__ at Sidney and a car museum further along. I hadn't heard of __Cabelas__ but it was clearly a big brand to people in these parts.
+
+As I lay in my tent in the evening I got a text message to tell me I'd used "9 MB of your 10MB monthly allowance on roaming". 10MB! What use is that in the days that single web pages can easily be a few megabytes? It seems that even though I was still in Wyoming, the cell phone had gone over to Nebraska which T-Mobile count as "roaming". The T-mobile man back in Stanford hadn't warned me about this. T-mobile's advice was for me to move back into a T-mobile area. The trouble was, the next spot of T-mobile coverage was either Omaha (the other side of Nebraska) or Des Moines (even further away in the middle of Iowa). Crossing Nebraska was going to take at least 10 days. I was now without mobile internet and no international calls. Thankfully, I found I could at least update Twitter via SMS so I could at least let people back home - who were expecting regular updates - know I wasn't dead.
