--- a/blog/0058.md
+++ b/blog/0058.md
@@ -5,6 +5,10 @@ Distance:	75.8 miles
 Route:	tracks/2014-06-05.geojson
 ---
 
+After packing everything up I went to Safeway and tried to find some chorizo. I had been trying to track down the Spanish cured meat since landing in San Francisco as it wouldn't need refrigeration and could add flavour to things. The lady at the checkout was of Mexican origin and at least knew the word although it seems Mexican chorizo is different. Realising that we were talking about different things, she called across a man called Stuart who was a Brit! He knew what I was on about but told me they don't have that sort of thing in the States. They have a lot of beef jerky instead. That's no good for me. Oh well.
+
+I cycled on to Fort Stanley Museum (having missed the opening hours the day before). There a lady named Pat showed me the officer's house and another lady took me over to the commanding officer's house. It was the commanding officer who gave Thomas Stevens his famous helmet.
+
 ![landscape](https://farm4.staticflickr.com/3861/14408918384_447d4f50d3.jpg "The commanding officers in 1884. One of them gave Thomas Stevens his hat.")
 
 ![landscape](https://farm4.staticflickr.com/3838/14408747302_457fb254bc.jpg "Fort Sidney")
@@ -13,8 +17,18 @@ Route:	tracks/2014-06-05.geojson
 
 ![landscape](https://farm6.staticflickr.com/5277/14386872576_5071522c06.jpg "Fort Sidney")
 
+Leaving Sidney on the US30, the countryside was back on the same loop as yesterday. I stopped at Chappell and at the food mart I got a 1.75l bottle of orange juice and a banana. There was a red/white barber's pole next to a US flag and a Lincoln Highway sign. This is a country that likes its red, white and blue.
+
+Leaving the town, the road headed up out of the valley and onto the top. The road was very straight and a bit undulating but it was good to get a different view. Along the top I saw a broken down car so I stopped to see if I could help. I lent the driver my tool set as he needed a screwdriver. For some reason he asked me if I was from Sweden! Clearly I didn't sound American so Sweden was his next guess.
+
 ![landscape](https://farm4.staticflickr.com/3861/14223385148_fd10f28ba3.jpg "Horses")
 
+The road headed back into the repeating Platte river valley and on to Ogallalla. In town I got to the P.O. just after 4.30pm. I'd been cycling hard to reach it before it closed and although I was 4 minutes late, they checked to see if my Amazon.com package had arrived. It hadn't. I was testing Philip Chen's (who I met in Rawlins) suggestion of getting things delivered to Post Offices.
+
+I went to the Chamber of Commerce and the ladies there told me to camp on Ogallala beach at Lake McConaughy. I cycled up out of town into a NE wind that had been partly against me all day. The "beach" was very sandy and it was difficult to get my tent pegs to stay in. It seems I was at the start of the Sand Hills area that stretched north. The lake was beautiful and I watched the sunset from my tent. I didn't quite have the beach to myself. There was a family in an RV on the beach front, four teenagers with a campfire, and a teenage couple on a date with a blanket and a picnic basket. It made me think of Marty and Jennifer in Back to the Future.
+
 ![landscape](https://farm4.staticflickr.com/3852/14408691252_17b9aa970d.jpg "Lake at sunset")
+
+After dark there was an amazingly bright meteor crossing from behind me in the south east heading over the lake towards the north west.
 
 ![landscape](https://farm3.staticflickr.com/2912/14430167753_c6cf766b03.jpg "Lake at night")
