--- a/blog/2015033.md
+++ b/blog/2015033.md
@@ -5,11 +5,11 @@ Distance:	81.2 miles
 Route:	tracks/2015-06-06.geojson
 ---
 
-I awoke to the sounds of footsteps on the pebble beach outside my tent. It was 5.15 am. Who was it? Was a knife going to slice through the thin, green, material into me? Was it a wild animal? I tried to think more clearly and decided it best to poke my head out of the flap. I looked around. A man was setting up a chair and his fishing kit. He didn't say anything and just continued setting up. I realised I'd probably taken his usual fishing spot and the beach wasn't really big enough for the two of us. I packed up my things and loaded up my bike. I'd been wanting to have a morning swim but I decided that I shouldn't as it would scare the fish away.
+I awoke to the sounds of footsteps on the pebble beach outside my tent. It was 5.15 am. Who was it? Was a knife going to slice through the thin, green material into me? Was it a wild animal? I tried to think more clearly and decided it best to poke my head out of the flap. I looked around. A man was setting up a chair and his fishing kit. He didn't say anything and just continued setting up. I realised I'd probably taken his usual fishing spot and the beach wasn't really big enough for the two of us. I packed up my things and loaded up my bike. I'd been wanting to have a morning swim but I decided that I shouldn't as it would scare the fish away.
 
-With the Sun rising, I pushed out of my camp at 5.45 am for [the earliest start I've had on the trip](https://twitter.com/RTWbike/status/607227224270487553). Back up on the path I found the fisherman's Lada and then lost the path. It just sort of stopped next to some more fishermen. I tried going along a hint of a path but that became a dead end. This certainly wasn't the EV6. After a bit of back-tracking I found where it had gone and was back on the right road. I arrived at Neszm&eacute;ly - Thomas Stevens' stop the night before - at 6.30 am to find that the first shop was open and already had a customer. I stocked up on food and drink. As I went through the village I found more little shops and then a SPAR. It was hardly 7 am and it was packed. People definitely got an early start to their day in Hungary. Amongst the other things on offer in SPAR I found Monty Python and Sherlock DVDs. I stocked up some more.
+With the Sun rising, I pushed out of my camp at 5.45 am for [the earliest start I've had on the trip](https://twitter.com/RTWbike/status/607227224270487553). Back up on the path I found the fisherman's Lada and then lost the path. It just sort of stopped next to some more fishermen. I tried going along a hint of a path but that became a dead end. This certainly wasn't the EV6. After a bit of back-tracking I found where it had gone and was back on the right road. I arrived at Neszm&eacute;ly - Thomas Stevens' stop the night before - at 6.30 am to find that the first shop was open and already had a customer. I stocked up on food and drink. As I went through the village I found more little shops and then a SPAR. It was hardly 7 am and it was packed. People definitely got an early start to their day in Hungary. Amongst the other things on offer in SPAR I found Monty Python and Sherlock DVDs. I stocked up on more food.
 
-After Nyerges&uacute;jfalu, I stopped on the side of a bike path to gorge on breakfast made of all the food I'd bought at three shops. I must have been a weird site to the people of all ages that cycled past me.
+After Nyerges&uacute;jfalu, I stopped on the side of a bike path to gorge on breakfast made of all the food I'd bought at three shops. I must have been a weird sight to the people of all ages that cycled past me.
 
 By lunchtime, following the curves of the Danube, I reached Esztergom - the catholic capital of Hungary. Up on the hill, with tremendous views across into Slovakia and along the Danube in both directions, stood a huge cathedral. In the little ticket office I had the option to buy tickets to various parts. Following Strasbourg and Ulm, I opted for a trip up to the top of the dome. The ticket seller warned me that it was a long way up. I said I should probably be able to manage. At the top the [views were stunning](https://twitter.com/RTWbike/status/607228413519216640). 
 
