Use less prejudiced language

--- a/blog/2015023.md
+++ b/blog/2015023.md
@@ -31,9 +31,9 @@ The camp is now a memorial and museum explaining the attrocities that occurred t
 
 ![landscape](https://farm6.staticflickr.com/5773/20648662314_dcca3b6272.jpg "The Nazi's put the phrase 'Work makes you free' on the gate to the camp as some kind of cruel mockery of those murdered inside. This gate was a recent replica as the original was stolen in 2014.")
 
-The seeds of this hate were already there in 1885 with the everyday prejudice evident against various groups including the Jews and the Romany gypsies. Thomas Stevens, whose journey I'm following, is guilty of this. Although he __is__ [seemingly positive](http://www.strudel.org.uk/blog/stevens/000179.shtml) about [gypsies in Hungary](http://www.strudel.org.uk/blog/stevens/000169.shtml), he doesn't care much for the gypsies in the Balkans. In Bulgaria and Turkey, he uses racist stereotypes against the Jewish currency changers. I can't excuse his prejudices. Yes, he was of his time and may well have been far more open to different people than his contemporaries. But those same stereotypes and racist undertones in society were part of a foundation for the horrors that came later.
+The seeds of this hate were already there in 1885 with the everyday prejudice evident against various groups including the Jews and the Romani people. Thomas Stevens, whose journey I'm following, is guilty of this. Although he __is__ [seemingly positive](http://www.strudel.org.uk/blog/stevens/000179.shtml) about [the Romani people in Hungary](http://www.strudel.org.uk/blog/stevens/000169.shtml), he doesn't care much for the Romani people in the Balkans. In Bulgaria and Turkey, he uses racist stereotypes against the Jewish currency changers. I can't excuse his prejudices. Yes, he was of his time and may well have been far more open to different people than his contemporaries. But those same stereotypes and racist undertones in society were part of a foundation for the horrors that came later.
 
-It is easy to fool ourselves into thinking that this sort of hate and barbarity is consigned to the past. It isn't. Anti-Semitism still exists. Gypsies are still mocked or feared. Wide-spread racism continues. Homosexuality is still persecuted the world over. Political opponents are still incarcerated. In 21st century Europe we demonise asylum seekers, refugees, and immigrants. There are increases in anti-Semitism and anti-Muslim attacks. We are as capable of the same horrific, inhumane, acts and sentiment today. I find that terrifying.
+It is easy to fool ourselves into thinking that this sort of hate and barbarity is consigned to the past. It isn't. Anti-Semitism still exists. The Romani are still mocked or feared. Wide-spread racism continues. Homosexuality is still persecuted the world over. Political opponents are still incarcerated. In 21st century Europe we demonise asylum seekers, refugees, and immigrants. There are increases in anti-Semitism and anti-Muslim attacks. We are as capable of the same horrific, inhumane, acts and sentiment today. I find that terrifying.
 
 Humanity has the capacity to be so much better. I'm glad to have met many friendly, generous, people along this trip who demonstrate that. At the same time I wonder how different my experience may have been if I'd been a black man cycling across the US last year, or a muslim cycling through Europe this year. A good way to honour those persecuted by prejudice in the past is to ensure we don't let it continue in the present and future.
 
