--- a/blog/2017002.md
+++ b/blog/2017002.md
@@ -11,7 +11,7 @@ One of my old Howies long-sleeved merino base layers has worn out. It did well a
 
 ### Camping 
 
-I'll be (hopefully) doing more camping than on the last two trips. I hope to keep to under GBP20/day on this trip. As accommodation is always the largest expense, I'll be doing more wild camping - especially in the wilds of Norway/Scotland - to help keep costs down.  I'm still massively impressed by the USD8/day Parry - [who I met in Utah](http://www.strudel.org.uk/RTWbike/blog/0039.html) - had spent crossing the US.
+I'll be (hopefully) doing more camping than on the last two trips. I hope to keep to under &pound;20/day on this trip. As accommodation is always the largest expense, I'll be doing more wild camping - especially in the wilds of Norway/Scotland - to help keep costs down.  I'm still massively impressed by the USD8/day Parry - [who I met in Utah](http://www.strudel.org.uk/RTWbike/blog/0039.html) - had spent crossing the US.
 
 I still have my camping gear from the previous trips which includes my trusty little DoE-approved 1-2 person tent (you'd have to be quite friendly for two). I've bought a new bike bag for the flight to Kirkenes as that will also double up as the ground sheet for my tent. I like things to have multiple uses if possible. I should probably invest in some new tent pegs as I've slowly lost or bent too many of the ones I had.
 
@@ -35,7 +35,7 @@ I replaced my gears on my bike a few months ago so they should be OK. The Schwal
 
 ### Flights
 
-My flights to Kirkenes are booked. I fly on 16th June. I just need to add my bike on as excess baggage for an extra GBP30. I am still trying to decide if I should book a flight from Bergen at the moment or wait until I have a better idea how long Norway will take to cycle once I've experienced it.
+My flights to Kirkenes are booked. I fly on 16th June. I just need to add my bike on as excess baggage for an extra &pound;30. I am still trying to decide if I should book a flight from Bergen at the moment or wait until I have a better idea how long Norway will take to cycle once I've experienced it.
 
 ### Getting ready
 
