Update entries. Remove mistaken files

--- a/blog/2017085.md
+++ b/blog/2017085.md
@@ -6,6 +6,20 @@ Route:	tracks/2017-09-05.geojson
 Elevation:	1145 m
 ---
 
-Driving head wind and rain all afternoon.
+I had driving head wind and rain all afternoon.
+
+![landscape](http://pbs.twimg.com/media/DJB39JYW4AEl_Ac.jpg "Oncoming rain")
+
+![landscape](http://pbs.twimg.com/media/DJB4GqKXYAEH2vg.jpg "Hidden castle (look carefully)")
+
+![landscape](http://pbs.twimg.com/media/DJB4SahXUAAleuC.jpg "Heading up from Porlock in the evening")
+
+![landscape](http://pbs.twimg.com/media/DJB4YrBW0AYq-Q5.jpg "Found one of the old AA boxes.")
+
+![panorama](http://pbs.twimg.com/media/DJB4lREW4AA0tBT.jpg "Exmoor panorama in the evening")
+
+![landscape](http://pbs.twimg.com/media/DJB4u9jW0AAwiKr.jpg "Exmoor after the rain.")
+
+![landscape](http://pbs.twimg.com/media/DJB48TlXgAAEyXV.jpg "Heading towards Lynmouth")
 
 Reached Lynemouth for the night. Had to ride up a steep, very hard, 25% hill.
