Update missing entries

--- a/blog/2017049.md
+++ b/blog/2017049.md
@@ -6,4 +6,53 @@ Route:	tracks/2017-07-30.geojson
 Elevation:	1109 m
 ---
 
-To be written
+![landscape](http://pbs.twimg.com/media/DF-YsssWAAAlova.jpg "Who would have thought I'd be rowing in a skiff on Loch Broom this morning? Thanks Paul!")
+
+It was an early rise because Ciri and I were joining Emma's dad - Paul - and his friends for a row on the Loch. We were there spot on the time. Paul turned up with life jackets. We helped get the skiff into the water. Wellies would have been handy but Ciri and I only had the shoes we were riding in.
+
+Once Paul's friends had had a go (they were due on the ferry so we said they should go first), Ciri and I got a chance. It was brilliant fun. Between the mum and daughter, and me and Ciri, with Paul as cox, we made a good team. Eventually we had to race the Islands ferry back to land so that Paul's friends wouldn't miss it.
+
+The row had worked up an appetite. Remembering the list of things my dad had told me I needed to do in the Highlands, I suggested to Ciri that we visit the "best fish and chip shop". So we had fish and chips at 11am. I also had a "serves 6" tiramisu with lunch because it only serves one hungry person on a bike.
+
+![landscape](http://pbs.twimg.com/media/DF-wqrwXUAIIgR3.jpg "Leaving Ullapool to yellow weather warnings.")
+
+![landscape](http://pbs.twimg.com/media/DGAQz3bXYAAlyXV.jpg "Looking back to Ullapool")
+
+![landscape](http://pbs.twimg.com/media/DGARCnLWsAAOFHa.jpg "The other way")
+
+As I left Ullapool the weather started to get greyer. I stopped at Corrieshalloch gorge for a look around as this was on my list of things to do from my dad. After the gorge my route headed north west again as I made my way towards Gairloch.
+
+![landscape](http://pbs.twimg.com/media/DGARj91XkAEVnRc.jpg "Corrieshalloch gorge")
+
+The rain came from the west in waves. I could see them coming and for a couple I raced hard to get north of them before they hit me. The others I didn't avoid. 
+
+![landscape](http://pbs.twimg.com/media/DGAR-0oXcAA7kzu.jpg "The oncoming rain from A' Chailleach")
+
+![landscape](http://pbs.twimg.com/media/DGASLm_XgAkbV8T.jpg "An Teallach")
+
+Near the head of the Loch I stopped for lunch in a road-side car park. Despite the rain, and me eating food whilst walking in big circles, the midges eventually found me so I rode on. The Highlands are the first place I want there to be wind on a bike touring trip. Wind is the only reliable thing to stop midges.
+
+![landscape](http://pbs.twimg.com/media/DGASY53XgAAMjDw.jpg "Little Loch Broom")
+
+![landscape](http://pbs.twimg.com/media/DGASmc6WAAAQb4K.jpg "Heading down to Gruinard Bay")
+
+In Gruinard Bay I seemed to have a reprieve from the midges and got to enjoy the view a little.
+
+![landscape](http://pbs.twimg.com/media/DGAS9tzXoAAhpx8.jpg "Looking north in Gruinard Bay")
+
+![landscape](http://pbs.twimg.com/media/DGATQFOXoAEkL0i.jpg "Thistles by the side of the road")
+
+Up and over the headland I got a grand view of the mountains to the south. I stopped and chatted in my broken French to a French family.
+
+![landscape](http://pbs.twimg.com/media/DGATh9bXkAQTiw8.jpg "North of Gairloch")
+
+I had the last few miles to go to Gairloch. The rain had clearly decided it had missed me after a break of an hour and wanted to drench me one last time before I finished for the day. As I finially reached Gairloch the rain decided it had made its point and stopped. I found the campsite and put up my tent whilst being attacked by midges.
+
+![landscape](http://pbs.twimg.com/media/DGAT0vRXcAID5lV.jpg "Riding down the hill in the rain to Gairloch this evening.")
+
+![landscape](http://pbs.twimg.com/media/DGAkfefWAAEFk25.jpg "Chicken curry and rice made inside my tent because I'm hiding from the midges.")
+
+I've had lots of people asking about my route. As I keep saying, I'm following the Atlantic as much as I reasonably can. When will I be in specific places? I don't know. I'll get there when I get there.
+
+For some reason part of my GPS trace went missing from Gruinard Bay this afternoon. It seems that on each big trip my GPS decides to delete the trace of one day. Looks like that is today.
+
