--- a/blog/2017050.md
+++ b/blog/2017050.md
@@ -6,6 +6,22 @@ Route:	tracks/2017-07-31.geojson
 Elevation:	1109 m
 ---
 
-To be written
+This morning I ticked off the last thing on my dad's list; I visited the little museum in Gairloch. I found out a little about neolithic times and the geology of Wester Ross.
 
-![landscape](https://pbs.twimg.com/media/DGF1dMvXgAAZk2K?format=jpg "camp spot")
+With a late start I headed east and inland to Loch Maree. The rain set in again as I rode down the edge of Loch Maree. At Kinlochewe I stopped for tea and cake in a little cafe before failing to be able to help a couple with a broken wheel because my spare spokes were too small for their wheel. They said they had someone they could call so I headed on.
+
+The road rose upwards and, as it turned a corner, I got a braw view down Glen Torridon. It was lovely. I sang about bubbling rivers and the glistening glens as I rode.
+
+Eventually I reached Shieldaig and had a choice. I could go the shortcut along the A896 or keep to the coast. I kept to the coast road. It was narrow and twisting and full of hills. It also had a traffic jam at one point because of wide loads in both directions and people refusing to give way. On a bike I wove through the stuck vehicles with their stubborn drivers and carried on. I was still trying to outrun showers and did a pretty good job of letting them pass ahead of me or rushing forwards so they passed behind.
+
+Around the headland I had a great view out towards rainy Raasay and Skye beyond. I also met a herd of highland cows by the side of the road. In the evening sun, this was one of my favourite views I've seen in Scotland.
+
+![landscape](http://pbs.twimg.com/media/DGF3QvkXYAE8Twa.jpg "Looking south.")
+
+A bit along the coast, a few miles from Applecross, I found a nice spot to wild camp. It was just up and out of view from the road, had a bit of a breeze (which helped keep the midges down), and had a grand view of the sunset. I pitched my tent and rang my dad to let him know where I was.
+
+I cooked dinner and watched the rain fall over on Skye. I'd be there tomorrow.
+ 
+![landscape](http://pbs.twimg.com/media/DGF1dMvXgAAZk2K.jpg "Camp spot with a view of Skye (and some lovely wind to stop the midges)")
+
+
